Fix alignment and centering

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
 }
 
 /* do not edit this footer */
@@ -28,5 +29,18 @@ img {
 .container {
   display: flex;
   justify-content: center;
-  gap: 52px;
+  gap: 52px
+}
+
+.content {
+  max-width: 200px;
+  justify-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text {
+  text-align: center;
+  text-wrap: wrap;
 }
